# bidops-ai

./: .dockerignore  .env.example  .env.render  .gitignore  DEPLOY-QUICK-START.md  DEPLOY.md  DEPLOYMENT-CHEATSHEET.md  DEPLOYMENT-COMPLETE-GUIDE.md  DEPLOYMENT-SUMMARY.md  Dockerfile  Dockerfile.railway  E2E_TEST_SUMMARY.md  FLY_DEPLOY.md  Makefile  QUICKSTART.md  RAILWAY_DEPLOY.md  README.md  START-HERE-DEPLOYMENT.txt  VERCEL_DEPLOY.md  alembic.ini  docker-compose.dev.yml  docker-compose.services-only.yml  docker-compose.yml  entrypoint.sh  plan.md  pyproject.toml  railway.json  render.yaml  requirements.txt  vercel.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
app/: __init__.py  config.py  database.py  errors.py  main.py  middleware.py
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.prod  alembic.ini  create_admin.py  create_test_user.py  fly.toml  register.json  requirements.minimal.txt  requirements.prod.txt  requirements.txt  requirements.vercel.txt  start.sh  vercel.json
config/: rules.default.json  rules.yaml
docs/: TECHNICAL_SPECIFICATION.md
e2e-tests/: .gitignore  ADMIN-E2E-TESTING-GUIDE.md  README.md  TEST-IMPLEMENTATION-SUMMARY.md  admin-e2e.spec.ts  bidops-e2e-tests.md  package-lock.json  package.json  playwright-tests.spec.ts  playwright.config.ts  test-results.json
frontend/: Dockerfile  fly.toml  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
migrations/: env.py
scripts/: e2e_shakedown.py  e2e_verify.py  gen_sample_tender.py  llm_smoke.py
tests/: conftest.py  test_harness.py  (+10 more)
(+405 files in other folders)
