[project]
name = "bidops-ai"
version = "0.1.0"
description = "Tender document intelligence system for construction bid operations"
requires-python = ">=3.11"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
